# chessBack

./: .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
CycleChessBot/: cpp_api.py  main.py
CycleChesscpp/: cyclechess_android.drawio  settings.gradle
CycleChesscpp/app/src/main/cpp/: CMakeLists.txt  android_connect.cpp  python_connect.cpp  python_connect.h
CycleChesscpp/app/src/main/cpp/board/: board.cpp  board.h  cell.cpp  cell.h  game_state.h  move.h  move_type.h
CycleChesscpp/app/src/main/cpp/game/: game.cpp  game.h  history.cpp  history.h  history_record.cpp  history_record.h  history_record_manager.cpp  history_record_manager.h
CycleChesscpp/app/src/main/cpp/main/: main.cpp  main.h  main_factory.cpp  main_factory.h  parser.cpp  parser.h  string_utils.cpp  string_utils.h  unparser.cpp  unparser.h
CycleChesscpp/app/src/main/cpp/pieces/: bishop.cpp  bishop.h  equal_steps_piece.h  king.cpp  king.h  knight.cpp  knight.h  linear_steps_piece.h  pawn.cpp  pawn.h  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
CycleChesscpp/app/src/main/cpp/pieces/utils/: color.cpp  color.h  offset.cpp  offset.h  piece_type.cpp  piece_type.h  position.cpp  position.h
CycleChesscpp/app/src/main/cpp/ut/: main.cpp  test_board.cpp  test_fen.cpp  test_pieces.cpp
back/: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
back/alembic/: env.py
back/alembic/versions/: 2025_01_06_1440-cd9631631d97_create_user_table.py
back/bot/: agent.py  bridge.py  chessEnv.py  game.py  local_prediction.py  main.py  mapper.py  mcts.py  node.py  selfplay.py  test.py  train.py  utils.py
back/bot/GUI/: pieces.py
back/cicd/: first_run.sh  update_back.sh
back/core/: cell.py  chess_parser.py  chess_unparser.py  color.py  move_type.py  piece.py  piece_type.py  piece_type_and_color.py
back/src/: users.db
back/src/api/: __init__.py
back/src/api/auth/: crud.py  jwt_view_utils.py  shemas.py  views.py
back/src/api/auth/schemas/: jwt_schemas.py  responses_schemas.py  users_schemas.py
back/src/api/game/: received_data_reaction.py  recieved_data_type.py  shemas.py  utils.py  views.py  web_socket_manager.py
back/src/api/game/schemas/: responses_schemas.py  websocket_messages_schemas.py  websocket_received_messages_schemas.py  websocket_schemas.py  websocket_sent_messages_schemas.py
back/src/auth/: utils.py
back/src/bot/: agent.py  bridge.py  chessEnv.py  config.py  evaluate.py  game.py  main.py  mapper.py  mcts.py  node.py  rlmodelbuilder.py  selfplay.py  server.py  test.py  train.py  utils.py
back/src/bot/GUI/: board.py  display.py
back/src/core/: config.py  utils.py
back/src/core/models/: db_helper.py  user.py
back/src/cpp_bridge/: board.py  chess_unparser.py  cpp_api.py  game_state.py  move.py  position.py  utils.py
(+258 files in other folders)
