[project]
name = "chessback"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn[standart] (>=0.34.0,<0.35.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "poetry (>=2.1.2,<3.0.0)",
    "pydantic[email] (>=2.10.4,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.36,<3.0.0)",
    "aiosqlite (>=0.20.0,<0.21.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "websockets (>=14.1,<15.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "poetry-plugin-export (>=1.9.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "numpy (<2.2.0)",
    "keras (>=3.9.2,<4.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "graphviz (>=0.20.3,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.1.2,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
